Fixed bme and opentrans namespace as namespace definition in root element and not more as attribute. Added missing type to element. Updated composer and license. Added two new tests for order and invoice ingoing for testing the deserialization of xml to php

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "naugrim/opentrans",
+    "name": "loeffelhardt/el-opentrans",
     "description": "A library to create openTRANS compatible XML documents.",
     "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "Erik Anders",
-            "email": "erik.anders@securepoint.de"
+            "name": "Giovanni Piemontese",
+            "email": "giovanni.piemontese@loeffelhardt.de"
         }
     ],
     "require": {
@@ -14,7 +14,7 @@
         "ext-dom": "*",
         "ext-libxml": "*",
         "jms/serializer": "^3.4",
-        "naugrim/bmecat": "^1.0"
+        "loeffelhardt/el-bmecat": "^1.1.0"
     },
     "autoload": {
         "psr-4": {
