--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "symplify/easy-coding-standard": "^10.1"
+        "symplify/easy-coding-standard": "^10.1",
+        "enlightn/security-checker": "^1.10",
+        "phpstan/phpstan": "^1.8"
     }
 }
