added phpunit tests on ci github action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,9 @@ jobs:
       - name: Run PHPStan
         run: vendor/bin/phpstan analyze -clear-result-cache -c phpstan.neon src/ -l 8
 
+      - name: Run PHPUnit Tests
+        run: vendor/bin/phpunit --testdox tests/
+
       - name: Run Security check
         run: vendor/bin/security-checker security:check composer.lock
 
