--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,10 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "symplify/easy-coding-standard": "^10.1",
         "enlightn/security-checker": "^1.10",
-        "phpstan/phpstan": "^1.8"
+        "phpstan/phpstan": "^1.8",
+        "phpunit/phpunit": "^9.5",
+        "symplify/easy-coding-standard": "^10.1"
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
