chore(gh-actions): update gh actions #minor

--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@v4
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
           fetch-depth: "0"
@@ -27,8 +27,8 @@ jobs:
         uses: Loeffelhardt/el-ms-teams-notification-action@main
         with:
           github-token: ${{ secrets.ACCESS_TOKEN }}
-          ms-teams-webhook-uri: ${{ secrets.MS_TEAMS_WEBHOOK_URI }}
-          notification-summary: "&#x1F680 Tag ${{ steps.bump.outputs.new_tag }} (${{ steps.bump.outputs.part }}) created in ${{ github.repository }}"
+          ms-teams-webhook-uri: ${{ secrets.MS_TEAMS_WEBHOOK_URI_CD }}
+          notification-summary: "Tag ${{ steps.bump.outputs.new_tag }} (${{ steps.bump.outputs.part }}) created in ${{ github.repository }}"
           notification-color: 17a2b8
           release-title: Tag (Branch ${{ github.ref_name }})
           notification-text: ${{ github.ref_name }} tagged with ${{ steps.bump.outputs.new_tag }}
