--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,13 +18,14 @@ jobs:
           '7.4',
           '8.0',
           '8.1',
+          '8.2',
         ]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Setup PHP
-        uses: Loeffelhardt/el-setup-php-action@v2
+        uses: Loeffelhardt/el-setup-php-action@main
         with:
           php-version: ${{ matrix.php-version }}
           extensions: dom, libxml
@@ -36,7 +37,7 @@ jobs:
           echo "::set-output name=dir::$(composer config cache-files-dir)"
 
       - name: Composer cache
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
@@ -70,7 +71,7 @@ jobs:
         with:
           github-token: ${{ secrets.ACCESS_TOKEN }}
           ms-teams-webhook-uri: ${{ secrets.MS_TEAMS_WEBHOOK_URI }}
-          notification-summary: "&#x1F691 CI el-opentrans failed (validation)"
+          notification-summary: "CI el-opentrans failed (validation)"
           notification-color: dc3545
           release-title: CI el-opentrans
           notification-text: Please click on "View Workflow Run" to analyse it.
